[tool.poetry]
name = "fuse-app-sheets"
version = "0.1.0"
description = "Fuse Sheets Handler Application"
authors = ["Ivanov Cyrill <jcommander13@yandex.ru>"]
license = "MIT"
packages = [
    { include = "fuse_sheets" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
openpyxl = "^3.0.10"
aioify = "^0.4.1"
aiohttp = "^3.8.1"
fuse-core = {git = "https://github.com/uselessvevo/fuse-core.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
